Fixed several issues on iPhone and iPad.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -60,7 +60,7 @@ h6 {
 }
 
 .navbar-collapse {
-    height: 100vh;
+    height: 101vh;
     margin-top: -48px;
 }
 .navbar-fixed-top .navbar-collapse {
@@ -649,6 +649,7 @@ h6 {
     }
     .navbar-default .navbar-collapse {
         background-color: rgba(0,0,0,0.8);
+        border-color: transparent;
     }
 }
 
@@ -1108,7 +1109,7 @@ footer .second-row li {
 }
 
 footer .row.logos li {
-    max-width: 90px;
+    max-width: 60px;
 }
 
 footer .row.logos ul {
@@ -1580,6 +1581,10 @@ footer .copyright {
     letter-spacing: 0.5px;
 }
 
+.our-team.contact .office span a {
+    color: white !important;
+}
+
 .our-team.contact .office h2 {
     text-transform: uppercase;
     color: white;
@@ -1709,7 +1714,10 @@ footer .copyright {
 @media (max-width: 480px) {
     .content.contact .form {
         padding-left: 0;
-        padding-right: 5px;
+        padding-right: 0;
+    }
+    .content.contact form div {
+        width: 100%;
     }
 }
 
@@ -2036,9 +2044,27 @@ footer .copyright {
     width: 100%;
 }
 
+@media (min-width: 768px) and  (max-width: 1100px) {
+    .content, .our-team {
+        padding: 40px 65px;
+    }
+}
+
+@media (min-width: 768px) and  (max-width: 992px) {
+    .content.contact {
+        padding: 45px 60px;
+    }
+}
+
 @media (max-width: 768px) {
     .content, .our-team {
-        padding: 10px;
+        padding: 40px;
+    }
+}
+
+@media (max-width: 480px) {
+    .internal .content {
+        padding: 25px;
     }
 }
 
@@ -2327,7 +2353,7 @@ footer .copyright {
 
 @media only screen and (max-width: 480px) {
     .content, .our-team {
-        padding: 15px;
+        padding: 25px;
     }
 }
 
@@ -2546,8 +2572,15 @@ footer .logos img {
 .veux-team .details span.name {
     font-weight: 500;
 }
+
 .content.partners {
     padding-bottom: 110px;
+}
+
+@media (max-width: 480px) {
+    .content.partners {
+        padding-bottom: 50px;
+    }
 }
 
 .v-team {
@@ -2562,6 +2595,22 @@ footer .logos img {
 @media (max-width: 1130px) {
     .v-team > img {
         margin-top: -8.3%;
+    }
+}
+
+@media (max-width: 480px) {
+    .v-team > img {
+        display: none;
+    }
+    .mobile-back {
+        max-width: 100%;
+        margin-bottom: -3px;
+        display: block;
+    }
+}
+@media (min-width: 480px) {
+    .mobile-back {
+        display: none;
     }
 }
 
@@ -2627,29 +2676,33 @@ footer .logos img {
 }
 
 .read-more-target-1 {
-    opacity: 0;
+    /*opacity: 0;
     max-height: 0;
     font-size: 0;
-    transition: .25s ease;
+    transition: .25s ease; */
+    display: none;
 } 
 
 .read-more-target-1.open {
-    opacity: 1;
+    /*opacity: 1;
     font-size: inherit;
-    max-height: 999em;
+    max-height: 999em; */
+    display: block;
 }
 
 .read-more-target-2 {
-    opacity: 0;
+    /*opacity: 0;
     max-height: 0;
     font-size: 0;
-    transition: .25s ease;
+    transition: .25s ease; */
+    display: none;
 } 
 
 .read-more-target-2.open {
-    opacity: 1;
+    /* opacity: 1;
     font-size: inherit;
-    max-height: 999em;
+    max-height: 999em; */
+    display: block;
 }
 
 @media only screen and (min-width: 845px) {
